Fixed coupons alignment on small devices

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -497,6 +497,22 @@ svg {
 }
 
 @media all and (max-width: 576px) {
+	.brand-coupon {
+		width: 175%;
+		-ms-transform: scale(0.6); /* IE 9 */
+		-ms-transform-origin: 0 0;
+		-moz-transform: scale(0.6); /* Firefox */
+		-moz-transform-origin: 0 0;
+		-o-transform: scale(0.6); /* Opera */
+		-o-transform-origin: 0 0;
+		-webkit-transform: scale(0.6); /* Safari And Chrome */
+		-webkit-transform-origin: 0 0;
+		transform: scale(0.6); /* Standard Property */
+		transform-origin: 0 0; /* Standard Property */
+	}
+}
+
+@media all and (max-width: 576px) {
 	.rec-carousel-wrapper {
 		padding: 0 5px;
 	}
